Bug 135922 - Accessibility Text allignment is not announced when using screenreader
Summary: Accessibility Text allignment is not announced when using screenreader
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:24.2.0
Keywords: accessibility
Depends on:
Blocks: a11y-Windows
  Show dependency treegraph
 
Reported: 2020-08-19 14:30 UTC by Karl-Heinz Arkenau
Modified: 2023-10-23 06:35 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Karl-Heinz Arkenau 2020-08-19 14:30:50 UTC
Description:
When using Writer with a screenreader th thext allignment is not announced.

Steps to Reproduce:
1 Open Writer.
2.Write a few words and than change the allignment of the text
3.read the text with a screenreader (make sure, announcement of text allignment is enabled).

Actual Results:
The change of text allignment is not announced.

Expected Results:
text allignment should be announced when changing.


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Using NVDA 2020.2
Comment 1 Milton 2020-08-24 17:52:57 UTC
I cannot confirm with Orca screen reader in Ubuntu and LibreOffice 6.4.5.2.
Milton
Comment 2 juergenkohler23 2020-09-03 07:24:09 UTC
I reproduced this bug with LibreOffice 7.0 and NVDA 2020.2 using Windows 10.
Comment 3 Matthias Doellert 2020-09-07 13:22:50 UTC
The bug could be reproduced.  Windows 10, Libre Office 7.0.0.3 (x64), NVDA 2020.2 and 2019.2.1
Comment 4 juergenkohler23 2020-09-10 07:19:36 UTC
Addition to my exact operating system information:

Windows
Edition	Windows 		10 Home
Version				1909
Operating system build		18363.1016

LibreOffice
Version:	7.0.0.3 (x64)
Build ID: 8061b3e9204bef6b321a21033174034a5e2ea88e
CPU-Threads: 	4; BS: Windows 10.0 Build 18363; UI-Render: Skia/Vulkan; VCL: win
Locale: 	de-DE (de_DE); UI: de-DE
Calc: 		threaded
Comment 5 juergenkohler23 2021-05-26 09:41:54 UTC
The problem still occurs... ("text alignment" of course means the Alignment of the text as left or right justified)

Windows
Edition Windows 10 Home
Version	20H2
Installed on ‎05.‎02.‎2021
Operating system build	19042.985

LibreOffice
Version: 7.1.3.2 (x64) / LibreOffice Community
Build ID: 47f78053abe362b9384784d31a6e56f8511eb1c1
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded
Comment 6 Michael Weghorn 2021-10-14 06:35:23 UTC
Corresponding issue in NVDA issue tracker: https://github.com/nvaccess/nvda/issues/6913
Comment 7 Michael Weghorn 2023-08-05 21:56:00 UTC
Looking at the IAccessible2 spec, IIUC, the alignment should be exposed via a "text-align" attribute -- via IAccessible2_2::attribute or IAccessible2::attributes. (IAccessibleText::attributes seems to be for text attributes, not object attributes whereas "text-align is listed in the object attributes for a paragraph).

Relevant links:
https://accessibility.linuxfoundation.org/a11yspecs/ia2/docs/html/interface_i_accessible2__2.html#a6cda836322d18e6206e10291b395aa55
https://accessibility.linuxfoundation.org/a11yspecs/ia2/docs/html/interface_i_accessible2.html#a0d51b0c189a000ee3b6ddf7f68da2009
https://wiki.linuxfoundation.org/accessibility/iaccessible2/textattributes
https://wiki.linuxfoundation.org/accessibility/iaccessible2/objectattributes
https://accessibility.linuxfoundation.org/a11yspecs/ia2/docs/html/interface_i_accessible_text.html#a29e5c8f69ec13c683ed6bca53333e6a5
Comment 8 Michael Weghorn 2023-10-20 13:03:02 UTC
(In reply to Michael Weghorn from comment #7)
> Looking at the IAccessible2 spec, IIUC, the alignment should be exposed via
> a "text-align" attribute -- via IAccessible2_2::attribute or
> IAccessible2::attributes. (IAccessibleText::attributes seems to be for text
> attributes, not object attributes whereas "text-align is listed in the
> object attributes for a paragraph).

Pending series of changes in Gerrit that implements that:

https://gerrit.libreoffice.org/c/core/+/158255 tdf#135922 a11y: Prepare reporting text attrs as IA2 obj attrs [NEW]        
https://gerrit.libreoffice.org/c/core/+/158256 tdf#135922 a11y: Report IA2 "text-align" attr [NEW]        
https://gerrit.libreoffice.org/c/core/+/158257 wina11y: Indent try block [NEW]        
https://gerrit.libreoffice.org/c/core/+/158258 wina11y: Just return empty attr string when none present [NEW]        
https://gerrit.libreoffice.org/c/core/+/158259 a11y: Improve XAccessibleExtendedAttributes doc [NEW]        
https://gerrit.libreoffice.org/c/core/+/158260 tdf#135922 wina11y: Report text-related IA2 obj attrs [NEW]

Together with a pending NVDA pull request to evaluate IAccessible2 text attributes for LibreOffice, this makes NVDA announce the text alignment as desired.

NVDA pull request:
https://github.com/nvaccess/nvda/pull/15649
Comment 9 Commit Notification 2023-10-21 11:48:43 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9362766b94a4627db0d8adfac4285388970d1fba

tdf#135922 a11y: Prepare reporting text attrs as IA2 obj attrs

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2023-10-21 11:48:45 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b0bf4043d320f69d1cf9dfcbcd6a8eac4df94015

tdf#135922 a11y: Report IA2 "text-align" attr

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2023-10-21 11:49:48 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/701563366c717c21ffa0588de6be1005df92a779

tdf#135922 wina11y: Report text-related IA2 obj attrs

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Michael Weghorn 2023-10-21 11:54:39 UTC
LibreOffice side is implemented now and I expect the NVDA pull request to be merged soon as well.