include/vcl/accessibility/AccessibleTextAttributeHelper.hxx
@@ -22,8 +22,31 @@
 #include <com/sun/star/accessibility/XAccessibleText.hpp>
 #include <com/sun/star/beans/PropertyValue.hdl>
 #include <com/sun/star/uno/Sequence.hxx>
+#include <o3tl/typed_flags_set.hxx>
 #include <rtl/ustring.hxx>
 #include <vcl/dllapi.h>
+
+/**
+ * According to the IAccessible2 specification, some of the attributes that LibreOffice
+ * handles as text attributes are mapped to IAccessible2 text attributes as well,
+ * but others should be reported as object attributes (e.g. text alignment is reported
+ * via the "text-align" object attribute on the paragraph object).
+ *
+ * https://wiki.linuxfoundation.org/accessibility/iaccessible2/textattributes
+ * https://wiki.linuxfoundation.org/accessibility/iaccessible2/objectattributes
+ *
+ * This enum class is used to specify the type(s) of attributes of interest.
+ */
+enum class IA2AttributeType
+{
+    None = 0x0000,
+    ObjectAttributes = 0x0001,
+    TextAttributes = 0x0002
+};
+
+template <> struct o3tl::typed_flags<IA2AttributeType> : is_typed_flags<IA2AttributeType, 0x003>
+{
+};
 
 class VCL_DLLPUBLIC AccessibleTextAttributeHelper
 {
@@ -31,14 +54,17 @@ public:
     /** Converts UNO text attribute properties to a string holding
      *  the corresponding IAccessible2 text attributes.
      * @param rUnoAttributes A sequence holding the UNO text attributes.
+     * @param eAttributeType: Thy type(s) of attributes of interest.
      * @returns String holding the corresponding IAccessible2 text properties.
      */
     static OUString ConvertUnoToIAccessible2TextAttributes(
-        const css::uno::Sequence<css::beans::PropertyValue>& rUnoAttributes);
+        const css::uno::Sequence<css::beans::PropertyValue>& rUnoAttributes,
+        IA2AttributeType eAttributeType);
 
     /**
      * Get the IAccessible2 text attributes and the span of the attributes at the given index.
      * @param xText The interface to query for the information.
+     * @param eAttributeType: Thy type(s) of attributes of interest.
      * @param nOffset Character offset for which to retrieve the information.
      * @param rStartOffset Out param that is set to the start index of the attribute run.
      * @param rEndOffset Out param that is set to the end index of the attribute run.
@@ -46,8 +72,8 @@ public:
      */
     static OUString
     GetIAccessible2TextAttributes(css::uno::Reference<css::accessibility::XAccessibleText> xText,
-                                  sal_Int32 nOffset, sal_Int32& rStartOffset,
-                                  sal_Int32& rEndOffset);
+                                  IA2AttributeType eAttributeType, sal_Int32 nOffset,
+                                  sal_Int32& rStartOffset, sal_Int32& rEndOffset);
 };
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab cinoptions=b1,g0,N-s cinkeys+=0=break: */
